--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["snghojeong <snghojeong@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "geolo_view"
+crate-type = ["cdylib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.pyo3]
+version = "0.11.1"
+features = ["extension-module"]
