--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ crate-type = ["cdylib"]
 [dependencies.pyo3]
 version = "0.11.1"
 features = ["extension-module"]
+
+[dependencies.rev_lines]
+version = "0.2.1"
